# image-search-engine

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  build_log.txt  coco_dataset.py  config.py  database.py  docker-compose.prod.yml  docker-compose.yml  external_apis.py  frontend.py  indexer.py  inference_model.py  main.py  nginx.conf  pyproject.toml  requirements.txt  start.sh
.streamlit/: config.toml
